--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.infinite-scroll-component {
+  overflow: hidden !important;
 }
